--- a/index.html
+++ b/index.html
@@ -1,52 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Contact form</title>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="32x32"
+			href="./assets/images/favicon-32x32.png"
+		/>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+    <link rel="stylesheet" href="./src/styles/index.css">
 
-  Contact Us
+		<title>Frontend Mentor | Contact form</title>
+	</head>
+	<body>
+		<main>
+			<h1>Contact Us</h1>
 
-  First Name
-  This field is required
-
-  Last Name
-  This field is required
-
-  Email Address
-  Please enter a valid email address
-  This field is required
-
-  Query Type
-  General Enquiry
-  Support Request
-  Please select a query type
-
-  Message
-  This field is required
-
-  I consent to being contacted by the team
-  To submit this form, please consent to being contacted
-
-  Submit
-
-  Message Sent!
-  Thanks for completing the form. We'll be in touch soon!
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+			<form action="#" method="post">
+				<div class="div-container">
+					<label for="first-name" class="asterisk">First Name</label>
+					<input type="text" name="first-name" id="first-name" required autocomplete="name" />
+					<p class="error-message">This field is required</p>
+				</div>
+				<div class="div-container">
+					<label for="last-name" class="asterisk">Last Name</label>
+					<input type="text" name="last-name" id="last-name" required autocomplete="family-name" />
+					<p class="error-message">This field is required</p>
+				</div>
+				<div class="div-container">
+					<label for="email" class="asterisk">Email Address</label>
+					<input type="email" name="email" id="email" required autocomplete="email" />
+					<p class="error-message">Please enter a valid email address</p>
+				</div>
+				<div class="div-container">
+          <p class="asterisk">Query type</p>
+          <div class="div-radio">
+            <div class='div-radio-inputs'>
+							<input
+								type="radio"
+								name="query-type"
+								id="type-general"
+								value="General Enquiry"
+							/>
+							<label for="type-general">General Enquiry</label>
+						</div>
+						<div class='div-radio-inputs'>
+							<input
+							type="radio"
+							name="query-type"
+							id="type-support"
+							value="Support Request"
+							/>
+							<label for="type-support">Support Request</label>
+						</div>
+					</div>
+					<p class="error-message">Please select a query type</p>
+				</div>
+				<div class="div-container">
+					<label for="message" class="asterisk">Message</label>
+					<textarea
+						name="message"
+						id="message"
+						cols="30"
+						rows="10"
+						required 
+					></textarea>
+					<p class="error-message">This field is required</p>
+				</div>
+				<div class="div-checkbox">
+					<input type="checkbox" name="consent" id="consent" required />
+					<label for="consent" class="asterisk">I consent to being contacted by the team</label>
+					<p class="error-message">
+						To submit this form, please consent to being contacted
+					</p>
+				</div>
+				<div>
+					<button type="submit">Submit</button>
+				</div>
+			</form>
+			<div class="div-success-message">
+				<h2>Message Sent!</h2>
+				<p>Thanks for completing the form. We'll be in touch soon!</p>
+			</div>
+		</main>
+		<footer>
+			<div>
+				Challenge by
+				<a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a
+				>. Coded by
+				<a href="https://github.com/beatrizvsgoncalves">Beatriz Gonçalves</a>.
+			</div>
+		</footer>
+	</body>
 </html>
