--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			href="./assets/images/favicon-32x32.png"
 		/>
 
-    <link rel="stylesheet" href="./src/styles/index.css">
+		<link rel="stylesheet" href="./src/styles/index.css" />
 
 		<script type="module" src="./src/js/index.js"></script>
 
@@ -23,63 +23,67 @@
 
 			<form action="#" method="post">
 				<div class="div-container">
-					<label for="first-name" class="asterisk">First Name</label>
-					<input type="text" name="first-name" id="first-name" autocomplete="cc-given-name" required />
-					<span id="first-name-error" class="error-message">This field is required</span>
+					<label for="firstName" class="asterisk">First Name</label>
+					<input
+						type="text"
+						name="firstName"
+						id="firstName"
+						autocomplete="cc-given-name"
+					/>
+					<span id="firstName-error" class="error-message"></span>
 				</div>
 				<div class="div-container">
-					<label for="last-name" class="asterisk">Last Name</label>
-					<input type="text" name="last-name" id="last-name" autocomplete="cc-family-name" required />
-					<span id="last-name-error" class="error-message">This field is required</span>
+					<label for="lastName" class="asterisk">Last Name</label>
+					<input
+						type="text"
+						name="lastName"
+						id="lastName"
+						autocomplete="cc-family-name"
+					/>
+					<span id="lastName-error" class="error-message"></span>
 				</div>
 				<div class="div-container">
 					<label for="email" class="asterisk">Email Address</label>
-					<input type="email" name="email" id="email" autocomplete="email" required />
-					<span id="email-error" class="error-message">Please enter a valid email address</span>
+					<input type="email" name="email" id="email" autocomplete="email" />
+					<span id="email-error" class="error-message"></span>
 				</div>
 				<div class="div-container">
-          <p class="asterisk">Query type</p>
-          <div class="div-radio">
-            <div class='div-radio-inputs'>
+					<p class="asterisk" id="type">Query type</p>
+					<div class="div-radio">
+						<div class="div-radio-inputs">
 							<input
 								type="radio"
-								name="query-type"
+								name="queryType"
 								id="type-general"
 								value="General Enquiry"
 							/>
 							<label for="type-general">General Enquiry</label>
 						</div>
-						<div class='div-radio-inputs'>
+						<div class="div-radio-inputs">
 							<input
-							type="radio"
-							name="query-type"
-							id="type-support"
-							value="Support Request"
+								type="radio"
+								name="queryType"
+								id="type-support"
+								value="Support Request"
 							/>
 							<label for="type-support">Support Request</label>
 						</div>
 					</div>
-					<span id="query-type-error" class="error-message">Please select a query type</span>
+					<span id="queryType-error" class="error-message"></span>
 				</div>
 				<div class="div-container">
 					<label for="message" class="asterisk">Message</label>
-					<textarea
-						name="message"
-						id="message"
-						cols="30"
-						rows="10"
-						required
-					></textarea>
-					<span id="message-error" class="error-message">This field is required</span>
+					<textarea name="message" id="message" cols="30" rows="10"></textarea>
+					<span id="message-error" class="error-message"></span>
 				</div>
-				<div>
+				<div class="div-container">
 					<div class="div-checkbox">
-						<input type="checkbox" name="consent" id="consent" required />
-						<label for="consent" class="asterisk">I consent to being contacted by the team</label>
+						<input type="checkbox" name="consent" id="consent" />
+						<label for="consent" class="asterisk"
+							>I consent to being contacted by the team</label
+						>
 					</div>
-					<span id="consent-error" class="error-message">
-						To submit this form, please consent to being contacted
-					</span>
+					<span id="consent-error" class="error-message"></span>
 				</div>
 				<div>
 					<button type="submit">Submit</button>
