--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 						name="firstName"
 						id="firstName"
 						autocomplete="cc-given-name"
+						class="keyboard-navigation"
+						tabindex="0
 					/>
 					<span id="firstName-error" class="error-message"></span>
 				</div>
@@ -39,12 +41,21 @@
 						name="lastName"
 						id="lastName"
 						autocomplete="cc-family-name"
+						class="keyboard-navigation"
+						tabindex="1"
 					/>
 					<span id="lastName-error" class="error-message"></span>
 				</div>
 				<div class="div-container">
 					<label for="email" class="asterisk">Email Address</label>
-					<input type="email" name="email" id="email" autocomplete="email" />
+					<input
+						type="email"
+						name="email"
+						id="email"
+						autocomplete="email"
+						class="keyboard-navigation"
+						tabindex="2"
+					/>
 					<span id="email-error" class="error-message"></span>
 				</div>
 				<div class="div-container">
@@ -56,6 +67,8 @@
 								name="queryType"
 								id="type-general"
 								value="General Enquiry"
+								class="keyboard-navigation"
+								tabindex="3"
 							/>
 							<label for="type-general">General Enquiry</label>
 						</div>
@@ -65,6 +78,8 @@
 								name="queryType"
 								id="type-support"
 								value="Support Request"
+								class="keyboard-navigation"
+								tabindex="4"
 							/>
 							<label for="type-support">Support Request</label>
 						</div>
@@ -73,12 +88,25 @@
 				</div>
 				<div class="div-container">
 					<label for="message" class="asterisk">Message</label>
-					<textarea name="message" id="message" cols="30" rows="10"></textarea>
+					<textarea
+						name="message"
+						id="message"
+						cols="30"
+						rows="10"
+						class="keyboard-navigation"
+						tabindex="5"
+					></textarea>
 					<span id="message-error" class="error-message"></span>
 				</div>
 				<div class="div-container">
 					<div class="div-checkbox">
-						<input type="checkbox" name="consent" id="consent" />
+						<input
+							type="checkbox"
+							name="consent"
+							id="consent"
+							class="keyboard-navigation"
+							tabindex="6""
+						/>
 						<label for="consent" class="asterisk"
 							>I consent to being contacted by the team</label
 						>
@@ -86,7 +114,7 @@
 					<span id="consent-error" class="error-message"></span>
 				</div>
 				<div>
-					<button type="submit">Submit</button>
+					<button type="submit" class="keyboard-navigation" tabindex="7">Submit</button>
 				</div>
 			</form>
 		</main>
