Fixes tabindex issue and improves keyboard navigation
Fixes an issue where the `tabindex` attribute was missing a closing double quote, resolving a bug that prevented proper tabbing in the form. Additionally, improves keyboard navigation by automatically focusing on the next element after completing the fields.

Fixes #123

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 						id="firstName"
 						autocomplete="cc-given-name"
 						class="keyboard-navigation"
-						tabindex="0
+						tabindex="0"
 					/>
 					<span id="firstName-error" class="error-message"></span>
 				</div>
