--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 				<div class="div-container">
 					<label for="email" class="asterisk">Email Address</label>
 					<input
-						type="email"
+						type="text"
 						name="email"
 						id="email"
 						autocomplete="email"
