--- a/index.html
+++ b/index.html
@@ -120,10 +120,15 @@
 		</main>
 		<footer>
 			<div>
-				Challenge by
-				<a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a
-				>. Coded by
-				<a href="https://github.com/beatrizvsgoncalves">Beatriz Gonçalves</a>.
+				<p>
+					Challenge by
+					<a href="https://www.frontendmentor.io?ref=challenge" class="keyboard-navigation">Frontend Mentor</a
+					>.
+				</p>
+				<p>
+					Coded by
+					<a href="https://github.com/beatrizvsgoncalves" class="keyboard-navigation">Beatriz Gonçalves</a>.
+				</p>
 			</div>
 		</footer>
 	</body>
