--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		/>
 
 		<link rel="stylesheet" href="./src/styles/index.css" />
+		<link rel="stylesheet" href="./src/styles/media-queries.css">
 
 		<script type="module" src="./src/js/index.js"></script>
 
@@ -19,117 +20,119 @@
 	</head>
 	<body>
 		<main>
-			<h1>Contact Us</h1>
-
-			<form action="#" method="post">
-				<div class="div-container">
-					<label for="firstName" class="asterisk">First Name</label>
-					<input
-						type="text"
-						name="firstName"
-						id="firstName"
-						autocomplete="cc-given-name"
-						class="keyboard-navigation"
-						tabindex="0"
-					/>
-					<span id="firstName-error" class="error-message"></span>
-				</div>
-				<div class="div-container">
-					<label for="lastName" class="asterisk">Last Name</label>
-					<input
-						type="text"
-						name="lastName"
-						id="lastName"
-						autocomplete="cc-family-name"
-						class="keyboard-navigation"
-						tabindex="1"
-					/>
-					<span id="lastName-error" class="error-message"></span>
-				</div>
-				<div class="div-container">
-					<label for="email" class="asterisk">Email Address</label>
-					<input
-						type="text"
-						name="email"
-						id="email"
-						autocomplete="email"
-						class="keyboard-navigation"
-						tabindex="2"
-					/>
-					<span id="email-error" class="error-message"></span>
-				</div>
-				<div class="div-container">
-					<p class="asterisk" id="type">Query type</p>
-					<div class="div-radio">
-						<div class="div-radio-inputs">
+			<div id="container">
+				<h1>Contact Us</h1>
+				
+				<form action="#" method="post">
+					<div class="div-fullname">
+						<div class="container-inputs">
+							<label for="firstName" class="asterisk">First Name</label>
 							<input
-								type="radio"
-								name="queryType"
-								id="type-general"
-								value="General Enquiry"
+								type="text"
+								name="firstName"
+								id="firstName"
+								autocomplete="cc-given-name"
 								class="keyboard-navigation"
-								tabindex="3"
+								tabindex="0"
 							/>
-							<label for="type-general">General Enquiry</label>
+							<span id="firstName-error" class="error-message"></span>
 						</div>
-						<div class="div-radio-inputs">
+						<div class="container-inputs">
+							<label for="lastName" class="asterisk">Last Name</label>
 							<input
-								type="radio"
-								name="queryType"
-								id="type-support"
-								value="Support Request"
+								type="text"
+								name="lastName"
+								id="lastName"
+								autocomplete="cc-family-name"
 								class="keyboard-navigation"
-								tabindex="4"
+								tabindex="1"
 							/>
-							<label for="type-support">Support Request</label>
+							<span id="lastName-error" class="error-message"></span>
 						</div>
 					</div>
-					<span id="queryType-error" class="error-message"></span>
-				</div>
-				<div class="div-container">
-					<label for="message" class="asterisk">Message</label>
-					<textarea
-						name="message"
-						id="message"
-						cols="30"
-						rows="10"
-						class="keyboard-navigation"
-						tabindex="5"
-					></textarea>
-					<span id="message-error" class="error-message"></span>
-				</div>
-				<div class="div-container">
-					<div class="div-checkbox">
+					<div class="container-inputs">
+						<label for="email" class="asterisk">Email Address</label>
 						<input
-							type="checkbox"
-							name="consent"
-							id="consent"
+							type="text"
+							name="email"
+							id="email"
+							autocomplete="email"
 							class="keyboard-navigation"
-							tabindex="6""
+							tabindex="2"
 						/>
-						<label for="consent" class="asterisk"
-							>I consent to being contacted by the team</label
-						>
+						<span id="email-error" class="error-message"></span>
 					</div>
-					<span id="consent-error" class="error-message"></span>
-				</div>
+					<div class="container-inputs">
+						<p class="asterisk" id="type">Query type</p>
+						<div class="container-radio">
+							<div class="input-radio">
+								<input
+									type="radio"
+									name="queryType"
+									id="type-general"
+									value="General Enquiry"
+									class="keyboard-navigation"
+									tabindex="3"
+								/>
+								<label for="type-general">General Enquiry</label>
+							</div>
+							<div class="input-radio">
+								<input
+									type="radio"
+									name="queryType"
+									id="type-support"
+									value="Support Request"
+									class="keyboard-navigation"
+									tabindex="4"
+								/>
+								<label for="type-support">Support Request</label>
+							</div>
+						</div>
+						<span id="queryType-error" class="error-message"></span>
+					</div>
+					<div class="container-inputs">
+						<label for="message" class="asterisk">Message</label>
+						<textarea
+							name="message"
+							id="message"
+							class="keyboard-navigation message"
+							tabindex="5"
+						></textarea>
+						<span id="message-error" class="error-message"></span>
+					</div>
+					<div class="container-inputs">
+						<div class="container-checkbox">
+							<input
+								type="checkbox"
+								name="consent"
+								id="consent"
+								class="keyboard-navigation"
+								tabindex="6""
+							/>
+							<label for="consent" class="asterisk"
+								>I consent to being contacted by the team</label
+							>
+						</div>
+						<span id="consent-error" class="error-message"></span>
+					</div>
+					<div>
+						<button type="submit" class="keyboard-navigation button" tabindex="7">Submit</button>
+					</div>
+				</form>
+			</main>
+			<footer>
 				<div>
-					<button type="submit" class="keyboard-navigation" tabindex="7">Submit</button>
+					<p>
+						Challenge by
+						<a href="https://www.frontendmentor.io?ref=challenge" class="keyboard-navigation">Frontend Mentor</a
+						>.
+					</p>
+					<p>
+						Coded by
+						<a href="https://github.com/beatrizvsgoncalves" class="keyboard-navigation">Beatriz Gonçalves</a>.
+					</p>
 				</div>
-			</form>
-		</main>
-		<footer>
-			<div>
-				<p>
-					Challenge by
-					<a href="https://www.frontendmentor.io?ref=challenge" class="keyboard-navigation">Frontend Mentor</a
-					>.
-				</p>
-				<p>
-					Coded by
-					<a href="https://github.com/beatrizvsgoncalves" class="keyboard-navigation">Beatriz Gonçalves</a>.
-				</p>
-			</div>
+		</div>
 		</footer>
 	</body>
 </html>
