Removes unnecessary tabindex

--- a/index.html
+++ b/index.html
@@ -51,7 +51,6 @@
 								aria-required="true"
 								aria-describedby="lastName-error"
 								aria-invalid="true"
-								tabindex="1"
 							/>
 							<span id="lastName-error" class="error-message" role="alert"></span>
 						</div>
@@ -67,7 +66,6 @@
 							aria-required="true"
 							aria-describedby="email-error"
 							aria-invalid="true"
-							tabindex="2"
 						/>
 						<span id="email-error" class="error-message" role="alert"></span>
 					</div>
@@ -86,7 +84,6 @@
 									aria-required="true"
 									aria-describedby="email-error"
 									aria-invalid="true"
-									tabindex="3"
 									/>
 									<label for="type-general">General Enquiry</label>
 								</div>
@@ -101,7 +98,6 @@
 									aria-required="true"
 									aria-describedby="email-error"
 									aria-invalid="true"
-									tabindex="4"
 									/>
 									<label for="type-support">Support Request</label>
 								</div>
@@ -118,8 +114,8 @@
 							aria-required="true"
 							aria-describedby="message-error"
 							aria-invalid="true"
-							tabindex="5"
-						></textarea>
+						/>
+						</textarea>
 						<span id="message-error" class="error-message" role="alert"></span>
 					</div>
 					<div class="container-inputs">
@@ -133,7 +129,6 @@
 								aria-describedby="consent-error"
 								aria-invalid="true"
 								aria-label="Consent contact"
-								tabindex="6"
 							/>
 							<label for="consent">I consent to being contacted by the team <span class="mandatory">*</span></label
 							>
@@ -141,7 +136,7 @@
 						<span id="consent-error" class="error-message" role="alert"></span>
 					</div>
 					<div>
-						<button type="submit" class="keyboard-navigation button" tabindex="7" aria-label="Submit the form">Submit</button>
+						<button type="submit" class="keyboard-navigation button"  aria-label="Submit the form">Submit</button>
 					</div>
 				</form>
 			</main>
@@ -149,12 +144,12 @@
 				<div>
 					<p>
 						Challenge by
-						<a href="https://www.frontendmentor.io?ref=challenge" target="_blank" class="keyboard-navigation" tabindex="8" aria-label="Challenge reference">Frontend Mentor</a
+						<a href="https://www.frontendmentor.io?ref=challenge" target="_blank" class="keyboard-navigation" aria-label="Challenge reference">Frontend Mentor</a
 						>.
 					</p>
 					<p>
 						Coded by
-						<a href="https://github.com/beatrizvsgoncalves" target="_blank" class="keyboard-navigation" tabindex="9" aria-label="Author's social network">Beatriz Gonçalves</a>.
+						<a href="https://github.com/beatrizvsgoncalves" target="_blank" class="keyboard-navigation" aria-label="Author's social network">Beatriz Gonçalves</a>.
 					</p>
 				</div>
 		</div>
